# SnapKV-Marimo

./: .gitignore  CLAUDE.md  README.md  competition.md  pyproject.toml  requirements.txt  snapkv_notebook.py
__marimo__/session/: snapkv_notebook.py.json
notebooks/: walkthrough.py
notebooks/__marimo__/session/: walkthrough.py.json
smoke_tests/: README.md  run_all.py  test_method_picker_regressions.py  test_notebook_imports.py  test_visualizations.py
src/: snapkv.py  visualizations.py
